--- a/.coding-ide/settings.json
+++ b/.coding-ide/settings.json
@@ -1,1 +1,1 @@
-{}
+{"theme":"dark:clouds_midnight","editor":{"keymode":"textinput","fontsize":"14","fontfamily":"Source Code Pro","charset":"UTF-8","softTab":true,"tabsize":4,"autoCompletion":true,"autoWrap":false,"autoSave":true,"aceTheme":"ace/theme/pastel_on_dark"},"version":1,"language":"en-US"}
